--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,127 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+.to-do-list {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid rgb(174, 121, 121);
+  border-radius: 10px;
+  padding: 20px;
+  width: 400px;
+  margin: 100px auto;
+  box-shadow: 0 0 10px rgba(227, 153, 153, 0.2);
+  background-color: rgb(77, 94, 88);
+  font-family: "Courier New", Courier, monospace;
+  text-align: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.task-list {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 10px;
+}
+
+.add-input {
+  border: 1px solid rgb(29, 3, 3);
+  border-radius: 10px;
+  padding: 10px;
+  width: 200;
+  margin: auto;
+  background-color: rgb(218, 235, 235);
+  color: rgb(23, 22, 22);
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  font-weight: bold;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.add-button {
+  border: 1px solid rgb(29, 3, 3);
+  border-radius: 5px;
+  padding: 10px;
+  width: 200;
+  margin: auto;
+  background-color: aquamarine;
+  margin-left: 10px;
+  color: white;
+  background-color: black;
+}
+
+.text {
+  flex: 1;
+}
+
+.delete-button {
+  border: 1px solid rgb(29, 3, 3);
+  border-radius: 10px;
+  padding: 10px;
+  width: 200;
+  margin: auto;
+  background-color: aquamarine;
+  margin-left: 10px;
+  color: white;
+  background-color: rgb(228, 31, 31);
+  margin-bottom: 10px;
+}
+
+.delete-button:hover {
+  background-color: rgb(233, 138, 138);
+}
+
+.up-button {
+  border: 1px solid rgb(29, 3, 3);
+  border-radius: 10px;
+  padding: 10px;
+  width: 200;
+  margin: auto;
+  background-color: aquamarine;
+  margin-left: 10px;
+  color: white;
+  background-color: rgb(31, 143, 228);
+  margin-bottom: 10px;
+}
+
+.up-button:hover {
+  background-color: rgb(59, 53, 53);
+}
+
+.down-button {
+  border: 1px solid rgb(29, 3, 3);
+  border-radius: 10px;
+  padding: 10px;
+  width: 200;
+  margin: auto;
+  background-color: aquamarine;
+  margin-left: 10px;
+  color: white;
+  background-color: rgb(228, 31, 152);
+  margin-bottom: 10px;
+}
+
+.down-button:hover {
+  background-color: rgb(138, 209, 233);
+}
+
+input[type="text"] {
+  font-size: 1.2rem;
+  padding: 10px;
+  border: 2px solid hsla(0, 0%, 80%, 0.5);
+}
+
+ol {
+  padding: 0;
+}
+
+li {
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 15px;
+  background-color: hsl(0, 14%, 95%);
+  margin-bottom: 10px;
+  border: 3px solid hsla(0, 0%, 85%, 0.75);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
 }
